[metadata]
name = toutetu
author = Arthur Dayne
version = 1.0.1
summary = 'Meals ordering tool'
classifier = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options.entry_points]
console_scripts = 
    toutetu = toutetu.toutetu:main
